--- a/nhung-ma-js.html
+++ b/nhung-ma-js.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <button type="button" onclick="showMessage();">Click Me!</button>
-
+<script>
+    let a = 0;
+</script>
 </body>
 </html>
